--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['python311', 'git', 'redis']
+nixPkgs = ['python311', 'pip', 'postgresql', 'redis', 'rabbitmq-server']
 aptPkgs = ['build-essential', 'libpq-dev']
 
 [phases.install]
