--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,8 @@
 [phases.setup]
-nixPkgs = ['python311', 'pip', 'postgresql', 'redis', 'rabbitmq-server']
-aptPkgs = ['build-essential', 'libpq-dev']
+nixPkgs = ['python311', 'postgresql', 'redis', 'rabbitmq-server']
+
+[phases.install]
+cmds = ['python3 -m pip install --upgrade pip', 'pip install -r requirements.txt']
 
 [phases.install]
 cmds = [
